--- a/dogs-vs-cats.ipynb
+++ b/dogs-vs-cats.ipynb
@@ -6,10 +6,8 @@
    "source": [
     "# IE4483 Artificial Intelligence and Data Mining\n",
     "\n",
-    "## Mini Project (Option 2)\n",
-    "\n",
-    "<b>Group Members:</b> <br>Wang Bo (U1920077E), Ng Wen Cong (U1922000L), Zhang Mengyuan (U1921206C)"
-   ]
+    "## Mini Project (Option 2)\n"
+    ]
   },
   {
    "cell_type": "markdown",
